syntax = "proto3";

package skillchain.marketplace.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "skillchain/marketplace/v1/application.proto";
import "skillchain/marketplace/v1/contract.proto";
import "skillchain/marketplace/v1/gig.proto";
import "skillchain/marketplace/v1/params.proto";
import "skillchain/marketplace/v1/profile.proto";

option go_package = "skillchain/x/marketplace/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/params";
  }

  // ListProfile Queries a list of Profile items.
  rpc GetProfile(QueryGetProfileRequest) returns (QueryGetProfileResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/profile/{owner}";
  }

  // ListProfile defines the ListProfile RPC.
  rpc ListProfile(QueryAllProfileRequest) returns (QueryAllProfileResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/profile";
  }

  // ListGig Queries a list of Gig items.
  rpc GetGig(QueryGetGigRequest) returns (QueryGetGigResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/gig/{id}";
  }

  // ListGig defines the ListGig RPC.
  rpc ListGig(QueryAllGigRequest) returns (QueryAllGigResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/gig";
  }

  // ListApplication Queries a list of Application items.
  rpc GetApplication(QueryGetApplicationRequest) returns (QueryGetApplicationResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/application/{id}";
  }

  // ListApplication defines the ListApplication RPC.
  rpc ListApplication(QueryAllApplicationRequest) returns (QueryAllApplicationResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/application";
  }

  // ListContract Queries a list of Contract items.
  rpc GetContract(QueryGetContractRequest) returns (QueryGetContractResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/contract/{id}";
  }

  // ListContract defines the ListContract RPC.
  rpc ListContract(QueryAllContractRequest) returns (QueryAllContractResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/contract";
  }

  // ApplicationsByGig Queries a list of ApplicationsByGig items.
  rpc ApplicationsByGig(QueryApplicationsByGigRequest) returns (QueryApplicationsByGigResponse) {
    option (google.api.http).get = "/skillchain/marketplace/v1/applications_by_gig/{gig_id}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetProfileRequest defines the QueryGetProfileRequest message.
message QueryGetProfileRequest {
  string owner = 1;
}

// QueryGetProfileResponse defines the QueryGetProfileResponse message.
message QueryGetProfileResponse {
  Profile profile = 1 [(gogoproto.nullable) = false];
}

// QueryAllProfileRequest defines the QueryAllProfileRequest message.
message QueryAllProfileRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllProfileResponse defines the QueryAllProfileResponse message.
message QueryAllProfileResponse {
  repeated Profile profile = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGetGigRequest defines the QueryGetGigRequest message.
message QueryGetGigRequest {
  uint64 id = 1;
}

// QueryGetGigResponse defines the QueryGetGigResponse message.
message QueryGetGigResponse {
  Gig gig = 1 [(gogoproto.nullable) = false];
}

// QueryAllGigRequest defines the QueryAllGigRequest message.
message QueryAllGigRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllGigResponse defines the QueryAllGigResponse message.
message QueryAllGigResponse {
  repeated Gig gig = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGetApplicationRequest defines the QueryGetApplicationRequest message.
message QueryGetApplicationRequest {
  uint64 id = 1;
}

// QueryGetApplicationResponse defines the QueryGetApplicationResponse message.
message QueryGetApplicationResponse {
  Application application = 1 [(gogoproto.nullable) = false];
}

// QueryAllApplicationRequest defines the QueryAllApplicationRequest message.
message QueryAllApplicationRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllApplicationResponse defines the QueryAllApplicationResponse message.
message QueryAllApplicationResponse {
  repeated Application application = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryGetContractRequest defines the QueryGetContractRequest message.
message QueryGetContractRequest {
  uint64 id = 1;
}

// QueryGetContractResponse defines the QueryGetContractResponse message.
message QueryGetContractResponse {
  Contract contract = 1 [(gogoproto.nullable) = false];
}

// QueryAllContractRequest defines the QueryAllContractRequest message.
message QueryAllContractRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllContractResponse defines the QueryAllContractResponse message.
message QueryAllContractResponse {
  repeated Contract contract = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryApplicationsByGigRequest defines the QueryApplicationsByGigRequest message.
message QueryApplicationsByGigRequest {
  uint64 gig_id = 1;
}

// QueryApplicationsByGigResponse defines the QueryApplicationsByGigResponse message.
message QueryApplicationsByGigResponse {
  Application applications = 1;
}
